asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_term_type.asteriacore
f : \(a : Type) -> a
  = f
  ;;
